[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

## disable the 'stack unwinding' feature of the standard library
## when panic happens, the kernel will not unwind the stack
# config when use `cargo build`
# [profile.dev]
# panic = "abort" # diable panic stack unwinding

# config when use `cargo build --release`
# [profile.release]
# panic = "abort" # diable panic stack unwinding

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 10 # (in seconds)